fix(hubert): Correctly align trigger button in Combobox and Select (#206)

--- a/packages/hubert/src/form/comboBox/ComboBox.module.scss
+++ b/packages/hubert/src/form/comboBox/ComboBox.module.scss
@@ -43,6 +43,7 @@
     border-image: initial;
     border: 1px solid rgb(var(--lotta-primary-color));
     border-left: none;
+    padding: var(--lotta-spacing);
     &[disabled] {
       border-color: rgb(var(--lotta-disabled-color));
     }
